<resources>

    <!-- MAIN APPLICATION-->
    <string name="app_name">GuBook Scanner</string>
    <string name="app_desc">
        "Where you can contribute in fixing your country by \n"
        "reporting problems to the city administration. \n"
        "Please Login or Register below!"
    </string>

    <!-- MAIN STRING -->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="title_utama">Menu Utama</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_about">About</string>
    <string name="title_notifications">Notifications</string>
    <string name="txt_username">Username</string>
    <string name="title_activity_detail">Detail</string>
    <string name="action_settings">Settings</string>
    <string name="hint_password">Password</string>
    <string name="lorem_ipsum"> </string>
    <string name="title_activity_komentar">List Komentar</string>
    <string name="title_activity_komentar_add">Tambah Komentar</string>

    <!--POPUP-->
    <string name="welcome">Selamat Datang di Perpustakaan Politeknik Aceh.</string>
    <string name="thanks">Terima Kasih Telah Mengunjungi Perpustakaan Politeknik Aceh :)</string>

    <!-- Fragment Profile -->
    <string name="change_password">Ganti Password</string>
    <string name="about_app">Tentang Aplikasi</string>
    <string name="FAQ">F.A.Q</string>
    <string name="version">Version</string>
    <string name="Getversi">1.0.0</string>
    <string name="logout">Keluar</string>

    <!-- Data Profile -->
    <string name="data_profile">DATA PROFILE</string>
    <string name="desc_profile">Infomasi data pengguna aplikasi</string>
    <string name="jdl_profile">INFORMASI DATA PENGGUNA</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="email_address">Email</string>
    <string name="jk">Jenis Kelamin</string>
    <string name="laki">Laki-Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="alamat">Alamat</string>
    <string name="asal">Asal</string>
    <string name="noHp">No HP</string>
    <string name="update_profile">Perbarui Profil</string>

    <!-- Login -->
    <string name="login_title">Masuk</string>
    <string name="login_desc">Silahkan Masuk Untuk Melanjutkan</string>
    <string name="username">Nim/Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Ingat Saya</string>
    <string name="forget_password">Lupa Password</string>
    <string name="signin">Masuk</string>
    <string name="create_account">Belum Punya Akun ? Daftar Akun</string>

    <!-- Register -->
    <string name="register_title">Buat Akun</string>
    <string name="register_desc">Isi data kamu disini</string>
    <string name="signup">Buat Akun </string>
    <string name="have_account">Sudah Punya Akun? Login</string>

    <string name="button_ok">OK</string>
    <string name="title_activity_menu_fragment">GuBook Scanner</string>

    <!-- About? -->
    <string name="nameApp">Aplication</string>
    <string name="App">GuBook Scanner</string>
    <string name="author">Author</string>
    <string name="nameAuthor">Ghaffara Urwatul Wusqa</string>
    <string name="contact">Contact</string>
    <string name="contactAuthor">+6285206754690</string>
    <string name="bantuan">Bantuan</string>


</resources>
