<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".views.activity.PageRegister"
    tools:openDrawer="start">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/BACKGROUND"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/root_layout"
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:layout_marginTop="26dp"
                    app:srcCompat="@drawable/logo_poltek" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="14dp"
                    android:text="@string/register_title"
                    android:textSize="22sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView2"
                    android:layout_marginBottom="20dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/register_desc" />


                </LinearLayout>

            </RelativeLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/formContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="180dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin">

                    <EditText
                        android:id="@+id/idFullname"
                        style="@style/GUBOOK_EditText"
                        android:hint="@string/fullname"
                        android:background="@drawable/shape_border_radius"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/idEmail"
                        style="@style/GUBOOK_EditText"
                        android:background="@drawable/shape_border_radius"
                        android:hint="@string/email_address"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:id="@+id/idPassword"
                        style="@style/GUBOOK_EditText"
                        android:background="@drawable/shape_border_radius"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                    <RadioGroup
                        android:id="@+id/rgJK"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="15dp"
                        android:layout_weight="20"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <RadioButton
                            android:id="@+id/rdLaki"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/laki" />

                        <RadioButton
                            android:id="@+id/rdPerempuan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/perempuan" />

                    </RadioGroup>

                    <EditText
                        android:id="@+id/idAlamat"
                        style="@style/GUBOOK_EditText"
                        android:background="@drawable/shape_border_radius"
                        android:hint="@string/alamat"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/idAsal"
                        style="@style/GUBOOK_EditText"
                        android:background="@drawable/shape_border_radius"
                        android:hint="@string/asal"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/idNoHp"
                        style="@style/GUBOOK_EditText"
                        android:background="@drawable/shape_border_radius"
                        android:hint="@string/noHp"
                        android:inputType="textPersonName" />

                    <Button
                        android:id="@+id/btnRegister"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="30dp"
                        android:onClick="onClick"
                        android:text="@string/signup"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:theme="@style/GUBOOKButtonBlue"
                        tools:ignore="OnClick" />

                    <ProgressBar
                        android:id="@+id/pb1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:visibility="gone" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/formContainer"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:background="@null"
                    android:text="@string/have_account"
                    android:textAllCaps="false" />

            </LinearLayout>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
