<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".views.activity.PageLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/BACKGROUND">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/root_layout"
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:layout_marginTop="56dp"
                    app:srcCompat="@drawable/logo_poltek" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="14dp"
                    android:text="@string/login_title"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="44dp"
                    android:gravity="center_horizontal"
                    android:text="@string/login_desc" />

            </RelativeLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/formContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="210dp"
                android:elevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin">

                    <EditText
                        android:id="@+id/idUsername"
                        style="@style/GUBOOK_EditText"
                        android:hint="@string/username"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/idPassword"
                        style="@style/GUBOOK_EditText"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_horizontal_margin">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:paddingRight="50dp"
                            android:text="@string/remember_me"
                            android:textColor="@color/loginSignup15text"
                            android:textStyle="bold" />

                        <!--<TextView-->
                        <!--android:id="@+id/tvForgetPassword"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_alignParentRight="true"-->
                        <!--android:layout_centerVertical="true"-->
                        <!--android:text="@string/forget_password"-->
                        <!--android:textColor="@color/loginSignup15text"-->
                        <!--android:textStyle="bold" />-->

                    </RelativeLayout>

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:text="@string/signin"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:theme="@style/GUBOOKButtonAccent" />

                    <ProgressBar
                        android:id="@+id/pb1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:visibility="gone" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/formContainer"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:background="@null"
                    android:text="@string/create_account"
                    android:textAllCaps="false" />

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>